# blunt

./: .gitignore  .travis.yml  CHANGELOG.md  Dockerfile  README.md  blunt.cabal  package.yaml  stack.yaml
.halcyon/: constraints
data/: index.html
executable/: Main.hs
