name: blunt
version: 0.0.2
cabal-version: >=1.10
build-type: Simple
license: MIT
license-file: LICENSE.md
maintainer: Taylor Fausak <taylor@fausak.me>
synopsis: Point-free Haskell as a service.
description:
    TODO
category: Web
data-files:
    index.html
data-dir: data
extra-source-files:
    CHANGELOG.md
    README.md

source-repository head
    type: git
    location: https://bitbucket.org/taylorfausak/blunt

library
    exposed-modules:
        Blunt
    build-depends:
        base ==4.*,
        bytestring -any,
        http-types -any,
        wai -any,
        warp ==3.*
    default-language: Haskell2010
    hs-source-dirs: library
    other-modules:
        Paths_blunt
    ghc-options: -Wall

    -- pointfree
    build-depends:
        array,
        containers,
        haskell-src-exts,
        transformers
    other-modules:
        Pointfree
        Plugin.Pl.Common
        Plugin.Pl.Parser
        Plugin.Pl.PrettyPrinter
        Plugin.Pl.Optimize
        Plugin.Pl.Rules
        Plugin.Pl.Transform

executable blunt
    main-is: Main.hs
    build-depends:
        base ==4.*,
        blunt -any
    default-language: Haskell2010
    hs-source-dirs: executable
    ghc-options: -Wall
