name: blunt
version: 0.0.16
cabal-version: >=1.10
build-type: Simple
license: MIT
license-file: LICENSE.md
maintainer: Taylor Fausak <taylor@fausak.me>
homepage: https://blunt.herokuapp.com
bug-reports: https://github.com/tfausak/blunt/issues
synopsis: Point-free Haskell as a service.
description:
    <https://github.com/tfausak/blunt>
category: Web
extra-source-files:
    CHANGELOG.md
    README.md

source-repository head
    type: git
    location: https://github.com/tfausak/blunt

library
    exposed-modules:
        Blunt
        Blunt.Markup
        Blunt.Script
        Blunt.Style
    build-depends:
        base ==4.*,
        aeson ==0.8.*,
        bytestring ==0.10.*,
        clay ==0.10.*,
        flow ==1.*,
        http-types ==0.8.*,
        jmacro ==0.6.*,
        lucid ==2.*,
        pointful >=1.0.6 && <2,
        text ==1.*,
        wai ==3.*,
        wai-extra ==3.*,
        wai-websockets ==3.*,
        warp ==3.*,
        websockets ==0.9.*,
        wl-pprint-text ==1.*
    default-language: Haskell2010
    hs-source-dirs: library
    ghc-options: -Wall

    -- pointfree
    build-depends:
        array >=0.3 && <0.6,
        containers >=0.4 && <0.6,
        haskell-src-exts ==1.16.*,
        transformers <0.5
    other-modules:
        Pointfree
        Plugin.Pl.Common
        Plugin.Pl.Parser
        Plugin.Pl.PrettyPrinter
        Plugin.Pl.Optimize
        Plugin.Pl.Rules
        Plugin.Pl.Transform

executable blunt
    main-is: Main.hs
    build-depends:
        base ==4.*,
        blunt -any
    default-language: Haskell2010
    hs-source-dirs: executable
    ghc-options: -Wall
